# longshot-jackpot-contract-cosmwasm

./: Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  longshot_jackpot.wasm
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
